added comment length graph. tried different network settings

--- a/Sentiment_Analysis_With_ReLU.ipynb
+++ b/Sentiment_Analysis_With_ReLU.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "4  kann nicht mitreden. \"x-men: apocalypse\" auf s...      0"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +88,7 @@
     "import tensorflow as tf\n",
     "import tflearn\n",
     "from tflearn.data_utils import to_categorical, pad_sequences\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "tatortreviews = pd.read_csv('data/tatort_reviews_labeled.csv')\n",
     "print(\"Number of reviews: \", len(tatortreviews))\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -105,6 +106,43 @@
    "source": [
     "reviews = tatortreviews['Review']\n",
     "labels = tatortreviews['Evalu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x11ffc79b0>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEICAYAAABRSj9aAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHhpJREFUeJzt3XmcXGWd7/HPN91ZyEZI0oSYHQxIUAjQooxEMyLrsLlh\n0Ku4jBEXRseZ6wW5I4xX7lUEmVEHmSAM4Es2RRSRGQ2I4YJsHQwQloQEEpLQSToJWTvppLt+80ed\nTipNd5LuqjpVffJ9v1716lPPWZ5fn+r88tRznnMeRQRmZpZdfSodgJmZlZcTvZlZxjnRm5llnBO9\nmVnGOdGbmWWcE72ZWcY50VtmSBovabOkmkrHUm6Sbpb0nUrHYb2DE72lTtISSVuTpLwySVqDiz1u\nRLwWEYMjoq0UcXamEglW0qclPZJmnZYtTvRWKWdHxGBgKnAscGmF4zHLLCd6q6iIWAn8nnzCB0BS\nf0lXS3pN0ipJ10s6IFn3oqSzCratldQk6ThJEyWFpNpk3YGSbpTUKGmFpO+0d+tIWirp+GT5E8l+\nRyXvPyfp1939XSS9TdJsSeskLZB0fsG6myX9m6TfSdok6QlJhxWsPzXZZ4Ok6yTNkfS3ko4ErgdO\nTL4BrS+o8qCujmdWyIneKkrSWOAMYFFB8XeBw8kn/7cCY4BvJetuBy4o2PY0YE1EPN3J4W8GWpNj\nHAucCvxtsm4OMD1Zfh/wCvDegvdzuvl7DAJmA7cBBwMzgOskTSnYbAbwz8BB5H/fK5N9RwK/JP+t\nZgSwAPgrgIh4EbgIeCzplhq2t+OZdeREb5Xya0mbgGXAauByAEkCZgJ/HxHrImIT8H/JJzXIJ9Jz\nJA1M3n+cfPLfjaRRwJnA1yJiS0SsBq4tOM4c8gkdYBrw/wredzvRA2cBSyLiPyKiNSL+AtwNfLRg\nm3si4smIaAV+zq5vMWcCz0fEr5J1PwRW7kOdXR3PbDe1lQ7A9lvnRcQDkt5HPnmPBNYDdcBAYG4+\n5wMgoAYgIhZJehE4W9JvgXPIt9Y7mgD0BRoLjtOH/H8skE/kV0sanRz7LuBySROBA4F53fx9JgDv\n6tC1Ugv8rOB9YfJuBtovQL+lIC4iIiQt34c6uzqe2W6c6K2iImKOpJuBq4HzgDXAVuCoiFjRxW7t\n3Td9gBciYlEn2ywDWoCRSYu3Y72LJDUDFwMPR8RGSSvJf5t4JCJy3fxVlgFzIuKUbu4H0AiMbX+T\nfKsZW7Dej5i1orjrxqrBvwCnSDomSbA3ANdKOhhA0hhJpxVsfwf5/vYvkv828CYR0Qj8AbhG0lBJ\nfSQdlnyDaDcH+Aq7umn+1OF9V2okDSh49QPuAw6X9ElJfZPXO5OLqXvzO+Adks5LLiR/GTikYP0q\nYGxSj1m3OdFbxUVEE3Aruy64/i/yFxcfl7QReAA4omD7RuAx8hcs79zDoT8F9ANeAN4gf8FzdMH6\nOcAQ4OEu3nflEvLfOtpff0yuJZxK/hrA6+S7Vb4H9N/LsYiINeT78q8C1gJTgAby30gA/gg8D6yU\ntGZvxzPrSJ54xKy6SOoDLAc+EREPVToe6/3cojerApJOkzRMUn/gm+QvQD9e4bAsI5zozarDicBi\n8hejzyY/KmlrZUOyrHDXjZlZxrlFb2aWcVUxjn7kyJExceLESodhZtarzJ07d01E1O1tu6pI9BMn\nTqShoaHSYZiZ9SqSlu7Ldu66MTPLOCd6M7OMc6I3M8s4J3ozs4xzojczyzgnejOzjHOiNzPLOCd6\nM7MK+Y9HX+X+5xrLXo8TvZlZhdz4yKvMfmFV2etxojczq4CIoGlTC3VD9jo3TdGc6M3MKmBzSyst\nrTlGDi7/DJF7TfSSbpK0WtL8grI7Jc1LXkskzUvKJ0raWrDu+nIGb2bWW63dvB2AEYPK36Lfl4ea\n3Qz8mPycngBExMfalyVdA2wo2H5xREwtVYBmZlnUmsvPBVJbo7LXtddEHxEPS5rY2TpJAs4H3l/a\nsMzMsi6f6PNptLyK7aOfBqyKiJcLyiYl3TZzJE3rakdJMyU1SGpoamoqMgwzs96p/Gm++ER/AXB7\nwftGYHzSdfN14DZJQzvbMSJmRUR9RNTX1e31uflmZpmS5iyuPU70kmqBDwF3tpdFREtErE2W55Kf\n7PjwYoM0M8ua9jyfQs9NUS36DwAvRcTy9gJJdZJqkuVDgcnAK8WFaGaWPe0teqXQebMvwytvBx4D\njpC0XNLnklUz2L3bBuC9wLPJcMtfAhdFxLpSBmxmlgWx82Js+eval1E3F3RR/ulOyu4G7i4+LDOz\nbNvVoi8/3xlrZlZB1d5Hb2ZmPdQrRt2YmVnPxa5xN2Wvy4nezKwCdvbRu+vGzCzbfDHWzCyjdrXo\n3XVjZpZJO8fRp1CXE72ZWcY50ZuZVYAvxpqZZVxveaiZmZn1UER7H70vxpqZZdLOG2PdojczyyY/\n1MzMbD/hcfRmZpmV3lPNnOjNzCrAXTdmZhnn4ZVmZhlXbXPG3iRptaT5BWVXSFohaV7yOrNg3aWS\nFklaIOm0cgVuZtab7RxHXyUt+puB0zspvzYipiav+wEkTSE/afhRyT7XSaopVbBmZllTFX30EfEw\nsG4fj3cucEdEtETEq8Ai4IQi4jMzy6QUZxIsqo/+YknPJl07ByVlY4BlBdssT8reRNJMSQ2SGpqa\nmooIw8ys94n0ZhLscaL/CXAoMBVoBK7p7gEiYlZE1EdEfV1dXQ/DMDPrnXY9j74KLsZ2JiJWRURb\nROSAG9jVPbMCGFew6dikzMzMClX7Y4oljS54+0GgfUTOvcAMSf0lTQImA08WF6KZWfak2HND7d42\nkHQ7MB0YKWk5cDkwXdJU8rEuAb4AEBHPS7oLeAFoBb4cEW3lCd3MrPdL41k3e030EXFBJ8U37mH7\nK4EriwnKzCzrIsVhN74z1sysAnZejK3WPnozMyuOH2pmZpZxfqiZmVnGRYp3TDnRm5lVgFv0ZmZW\nMk70ZmaV4IuxZmbZtmt4pfvozcwyycMrzcwyLqr9oWZmZlacXYMr3XVjZpZJuSqbM9bMzEosl8sn\n+po+btGbmWVSWzjRm5llWptb9GZm2bYz0XscvZlZNrlFb2aWce2jbvo40ZuZZVNbLv+zKrpuJN0k\nabWk+QVl35f0kqRnJd0jaVhSPlHSVknzktf15QzezKy3asvlM321dN3cDJzeoWw28PaIOBpYCFxa\nsG5xRExNXheVJkwzs2ypqj76iHgYWNeh7A8R0Zq8fRwYW4bYzMwyqy15BkJVdN3sg88C/1nwflLS\nbTNH0rSudpI0U1KDpIampqYShGFm1nu03xnbJ4UrpUVVIekyoBX4eVLUCIyPiKnA14HbJA3tbN+I\nmBUR9RFRX1dXV0wYZma9zvqt26ntIw7oW1P2unqc6CV9GjgL+EQks9xGREtErE2W5wKLgcNLEKeZ\nWaas2bSdEYP7UVtT/iZ9j2qQdDrwDeCciGguKK+TVJMsHwpMBl4pRaBmZlnSFkFtGv02QO3eNpB0\nOzAdGClpOXA5+VE2/YHZyTRYjycjbN4LfFvSDiAHXBQR6zo9sJnZfiyXi1QeUQz7kOgj4oJOim/s\nYtu7gbuLDcrMLOvaIlIZWgm+M9bMrCLacpHK0Epwojczq4iIdGaXAid6M7OKaMu568bMLNPaIujj\nrhszs+wKX4w1M8u2tpxb9GZmmdYW6Uw6Ak70ZmYVkcsFNR51Y2aWXTlfjDUzy7a2XLjrxswsy3Lh\nO2PNzDLNN0yZmWVczo9AMDPLtpxvmDIzyzY/vdLMLONyvmHKzCzbcrkgpTzvRG9mVglVNcOUpJsk\nrZY0v6BsuKTZkl5Ofh5UsO5SSYskLZB0WrkCNzPrzXJV9lCzm4HTO5RdAjwYEZOBB5P3SJoCzACO\nSva5TlJNyaI1M8uIqnoEQkQ8DKzrUHwucEuyfAtwXkH5HRHREhGvAouAE0oUq5lZZlRV100XRkVE\nY7K8EhiVLI8BlhVstzwpMzOzArkc1dOi35uICCC6u5+kmZIaJDU0NTUVG4aZWa+Sv2Eqnbp6Ws0q\nSaMBkp+rk/IVwLiC7cYmZW8SEbMioj4i6uvq6noYhplZ79QbZpi6F7gwWb4Q+E1B+QxJ/SVNAiYD\nTxYXoplZ9uQivccU1+5tA0m3A9OBkZKWA5cD3wXukvQ5YClwPkBEPC/pLuAFoBX4ckS0lSl2M7Ne\naUdbjjeadzB8YL9U6ttroo+IC7pYdXIX218JXFlMUGZmWbZh6w7acsHBQ/unUp/vjDUzS1lzS76j\nY2C/vba1S8KJ3swsZc07WgEY1C+d+0md6M3MUralvUXf3y16M7NMat7uFr2ZWaZtcR+9mVm2bW5J\nWvT93aI3M8ukFW9sBWDU0AGp1OdEb2aWsjeatzNkQC0D+rpFb2aWSRu37WDogL6p1edEb2aWsk3b\nWhkyIJ0LseBEb2aWuk3bdjjRm5llWb5F764bM7PMcteNmVnGuevGzCzDWpNn0R94gLtuzMwy6c+L\n1wJwSEo3S4ETvZlZql5b1wzA9CMOTq1OJ3ozsxRt3Z5/oNlBg9KZRhCc6M3MUrUjlwOgNqWJwWEf\n5oztiqQjgDsLig4FvgUMAz4PNCXl34yI+3scoZlZhrS2BQB9a9JrZ/c40UfEAmAqgKQaYAVwD/AZ\n4NqIuLokEZqZZUhrWw4JalJs0Zfqv5STgcURsbRExzMzy6QduaBvn3R7zUtV2wzg9oL3F0t6VtJN\nkg7qbAdJMyU1SGpoamrqbBMzs8xpbctRW5Neax5KkOgl9QPOAX6RFP2EfH/9VKARuKaz/SJiVkTU\nR0R9XV1dsWGYmfUK7cMr01SKFv0ZwNMRsQogIlZFRFtE5IAbgBNKUIeZWSYsXdtMay5SrbMUif4C\nCrptJI0uWPdBYH4J6jAzy4TX12/llCmjUq2zqKfqSBoEnAJ8oaD4KklTgQCWdFhnZrbfWrp2Cxu3\ntTJh+MBU6y0q0UfEFmBEh7JPFhWRmVlGtU8Kftz4TseolI3vjDUzS8n6rTsAGHPQAanW60RvZpaS\n19fnW/SjD0zvyZXgRG9mlpola7dw4AF9GTYwvQeagRO9mVlqfv/8KiaMSPdCLDjRm5mlIpcLmja1\nMKhfelMItnOiNzNLwYbkQmzaY+jBid7MLBVrt2wHYMTgdPvnwYnezCwVaze3ADA8xZml2jnRm5ml\nYF3SoneiNzPLqAdfWg1A3ZD+qdftRG9mloJIHlh58JB0b5YCJ3ozs1Rs2LqdKaOHVqRuJ3ozsxSs\nb97BsIF9K1K3E72ZWZnNWdhEw9I3OPAAJ3ozs0z62WNLAPjAkenfLAVO9GZmZbWheQcPvLia044a\nxYePH1uRGJzozczK6IrfPg/A0WOHVSwGJ3ozszLZtqONe/6yAoAvTT+sYnE40ZuZlclr65oB+M55\nb0dSxeIodnLwJcAmoA1ojYh6ScOBO4GJ5CcHPz8i3iguTDOz3uf+5xoBOHrsgRWNoxQt+r+OiKkR\nUZ+8vwR4MCImAw8m783M9jvtif4dY3p/ou/oXOCWZPkW4Lwy1GFmVtVaWttYuGozx4w9sKLdNlB8\nog/gAUlzJc1MykZFRGOyvBLodOCopJmSGiQ1NDU1FRmGmVl1eXTRGqAyE410VOycVidFxApJBwOz\nJb1UuDIiQlJ0tmNEzAJmAdTX13e6jZlZb3XvvNcBOHfqmApHUmSLPiJWJD9XA/cAJwCrJI0GSH6u\nLjZIM7Pe5vUN2+hbI8YNT38y8I56nOglDZI0pH0ZOBWYD9wLXJhsdiHwm2KDNDPrTSKCJ19dx9nH\nvKXSoQDFdd2MAu5JLjLUArdFxH9Jegq4S9LngKXA+cWHaWbWezy0IN+RMWpo+s+e70yPE31EvAIc\n00n5WuDkYoIyM+utlq7dwqyHXwHg/PpxFY4mr9iLsWZmllj+RjOfv7WBhas2c+KhI5g0clClQwKc\n6M3MSmJ983ZO+t5DAFxwwnj+998cWeGIdnGiNzMrgelX/wmAr548mZnvPZRB/asnvVZPJGZmvdRN\nj7zK+uYdHDd+GF/668PoX1tT6ZB246dXmpkVISL49n0vAPDTC99ZdUkenOjNzHps3ZbtfGzW4wCc\ndfRohg/qV+GIOueuGzOzHlizuYWzf/QIjRu2MW3ySC45422VDqlLTvRmZj1w7eyFNG7YxuGjBnPD\np+oZ0Lf6umzaOdGbmXVDRHDHU8t46KX83a/3XTyNfrXV3QvuRG9mto9aWtu448llXH5vfsLv/3na\nEVWf5MGJ3sxsn/37nFf4weyFSHD/303jyNFDKx3SPnGiNzPbi4hg6dpmrn1gIQBPXHoyB1fJA8v2\nhRO9mdketOWCP760ms/f2gDAF6cf1quSPDjRm5nt0SdvfII/L14LwI8/fiwfOLLyUwN2lxO9mVkn\nGjds5ewfPcqazS28560juPDEiZx61CGVDqtHnOjNzDpoWLKOr94xjzWbW5jxznF8cfphTBhRHY8c\n7gknejOzxNrNLfzDL55h0erNrNy4jc+8ZyKXnXkktTXVP4RyT5zozcyA38xbwW1PvMYTr65j6rhh\n/M07RnPpmdXzTPli9DjRSxoH3Ep+7tgAZkXEv0q6Avg80JRs+s2IuL/YQM3MSu3BF1fx+Cv5C633\n/GUF23bkOGHScG797AlV/UiD7iqmRd8K/ENEPC1pCDBX0uxk3bURcXXx4ZmZld6fFqxm0erNXD/n\nFdY3b6dfbR8EXHrmkfyPd0+odHglV8zk4I1AY7K8SdKLwJhSBWZmVmpL127h2eUb+MdfPENLaw6A\nK86ewqffM6nCkZVXSfroJU0EjgWeAN4DXCzpU0AD+Vb/G53sMxOYCTB+/PhShGFm9iZtuWD+ig1s\nb8vxT7+ez0srNwFw1UeO5sx3jGZwFU35Vy6KiOIOIA0G5gBXRsSvJI0C1pDvt/8/wOiI+OyejlFf\nXx8NDQ1FxWFm1m7r9jbWbG4B4E8Lm/inX8/fue78+rF8afpbmTBiIJIqFWJJSJobEfV7266o/8ok\n9QXuBn4eEb8CiIhVBetvAO4rpg4zs321PemO+cj1f+b51zfuLO9X04efXlhPTR8xddywqpq4Ow3F\njLoRcCPwYkT8oKB8dNJ/D/BBYH5n+5uZldKPHnyZa2Yv3Pn+9KMO4QNT8o8rmDBiIO+cOLxSoVVc\nMf+tvQf4JPCcpHlJ2TeBCyRNJd91swT4QlERmpl1YunaLXz8hido3t4KwOaWVsYMO4CPv2s8fSQ+\nfNyYXvfwsXIpZtTNI0BnHVweM29mJffQgtV8/78WkEuuK27a1sqK9Vv50HFjdl5QPfnIUbzv8LpK\nhlmV9q+OKjPrNZ5Ztp4fPvgybUlif3nVZtZt2c60ySN3bvP+tx3MFeccRU2f3n1Rtdyc6M2sKry2\ntpl/f3gxbbl8Yn92+QYWrtrEUW/Jz+I0cnA/PnL8WP7+lMMrGWav5ERvZqlbuGoT9z3buFvZ3KXr\neHTRWkYN7b+z7Lxjx3D1R49JO7zMcaI3s7LZ3NLK/c810tq2+/06v5i7jL+8tv5N258wcTh3XXRi\nWuHtN5zozaxo67ZsZ96yN90Az5wFTdzy2NJO9znnmLfwwwuOLXdohhO9me2jjdt28Nra5k7X/csD\nL/PAi6s6XTdycH9+93cndVpu6XCiN7OdWttyrN+6o9N1M29t4OlOulvanXjoCC45421vKh994ACP\nZ68wJ3oz2+kzNz/F/395TZfrT50yio8cP7bTdVPHDXNCr1JO9Gb7iQ9e9yjPLd+wx21ac8FfHTaC\nM97+5kmwJXHqlFFO5r2QE71ZL7dq4zY+deOTbG5p3eN2K9ZvZdrkkRw99sAut+kj8aHjxjJpZO+d\nCNvezInerMo8//oG/vm3L9Daltun7Tdua2XR6s2cdtQoBvfv2+V2fWvEV97/VsYeNLBUoVov4URv\nViZPLVnHzY8uIejenA+vNG3hpZWbdrvVf08G9a/l7W8ZylUfOYZ+tX16EqplnBO92R488MIqHl3c\n9cXJPfnzorW8umYLE0Z0vwX9oePG8IPzp/aoXrOOnOgts3a05bjjydfYsr2tx8e48ZFXWd+8nQF9\na3q0/4wTxvHtc9/e4/rNSsGJ3qpS06YW/rx4DcXMdLm4aTM/+uOiomP51llT+OxJ2Z482rLNid5K\npqW1jWeWbdj59MFi3PToq8x+ofM7LbujX00f5nxjOsMO6Nej/SV63Jo3qxZO9PuZdVu2s755e1mO\n/cu5y7nuT4tLdrwTJg3nex8+uqhjDB1Qywjfam/7OSf6CmppbStJ63dfbd7WyrSrHqKldd+G7fXE\nIUMHcO3HSnMR8fBRg52kzUrAib5Cnn7tDT56/WOpJvp2X5x+GG87ZEhZjn34qCEcOXpoWY5tZj1T\ntkQv6XTgX4Ea4KcR8d1y1dVd9z37OpfdM3/n3JOVsKMtR1su+Poph9M/xbHPA/vV8LF3jvd4a7P9\nSFkSvaQa4N+AU4DlwFOS7o2IF0pZz0srN3LxbX/p9n5Nm1toywUfre/84UxpGXfQQI/mMLOyK1eL\n/gRgUUS8AiDpDuBcoKSJfkBtDZNHDe72fpNHDebEw0byyXdPKGU4ZmZVqVyJfgywrOD9cuBdhRtI\nmgnMBBg/fnyPKpk4chDXfeL4HoZoZrZ/qFhHbUTMioj6iKivq6urVBhmZplXrkS/AhhX8H5sUmZm\nZikrV6J/CpgsaZKkfsAM4N4y1WVmZntQlj76iGiV9BXg9+SHV94UEc+Xoy4zM9uzso2jj4j7gfvL\ndXwzM9s3vmvGzCzjnOjNzDLOid7MLOMUFXzey84gpCZgaRGHGAn0bL638nJc3eO4usdxdU8W45oQ\nEXu9EakqEn2xJDVERH2l4+jIcXWP4+oex9U9+3Nc7roxM8s4J3ozs4zLSqKfVekAuuC4usdxdY/j\n6p79Nq5M9NGbmVnXstKiNzOzLjjRm5llXK9O9JJOl7RA0iJJl6Rc9zhJD0l6QdLzkr6alF8haYWk\necnrzIJ9Lk1iXSDptDLGtkTSc0n9DUnZcEmzJb2c/DwozbgkHVFwTuZJ2ijpa5U4X5JukrRa0vyC\nsm6fH0nHJ+d5kaQfSlIZ4vq+pJckPSvpHknDkvKJkrYWnLfrU46r259bSnHdWRDTEknzkvI0z1dX\nuaFyf2MR0Stf5J+KuRg4FOgHPANMSbH+0cBxyfIQYCEwBbgC+MdOtp+SxNgfmJTEXlOm2JYAIzuU\nXQVckixfAnwv7bg6fHYrgQmVOF/Ae4HjgPnFnB/gSeDdgID/BM4oQ1ynArXJ8vcK4ppYuF2H46QR\nV7c/tzTi6rD+GuBbFThfXeWGiv2N9eYW/c55aSNiO9A+L20qIqIxIp5OljcBL5KfQrEr5wJ3RERL\nRLwKLCL/O6TlXOCWZPkW4LwKxnUysDgi9nQ3dNniioiHgXWd1LfP50fSaGBoRDwe+X+RtxbsU7K4\nIuIPEdGavH2c/CQ+XUorrj2o6Plql7R8zwdu39MxyhRXV7mhYn9jvTnRdzYv7Z4SbdlImggcCzyR\nFF2cfNW+qeDrWZrxBvCApLnKz80LMCoiGpPllcCoCsTVbga7/wOs9PmC7p+fMclyWvEBfJZ8q67d\npKQbYo6kaUlZmnF153NL+3xNA1ZFxMsFZamfrw65oWJ/Y7050VcFSYOBu4GvRcRG4Cfku5OmAo3k\nvz6m7aSImAqcAXxZ0nsLVyatg4qMq1V+xrFzgF8kRdVwvnZTyfPTFUmXAa3Az5OiRmB88jl/HbhN\n0tAUQ6q6z62DC9i9MZH6+eokN+yU9t9Yb070FZ+XVlJf8h/kzyPiVwARsSoi2iIiB9zAru6G1OKN\niBXJz9XAPUkMq5Kvgu1fV1enHVfiDODpiFiVxFjx85Xo7vlZwe7dKGWLT9KngbOATyQJguRr/tpk\neS75ft3D04qrB59bmuerFvgQcGdBvKmer85yAxX8G+vNib6i89ImfYA3Ai9GxA8KykcXbPZBoH1E\nwL3ADEn9JU0CJpO/0FLquAZJGtK+TP5i3vyk/guTzS4EfpNmXAV2a2lV+nwV6Nb5Sb6Cb5T07uRv\n4VMF+5SMpNOBbwDnRERzQXmdpJpk+dAkrldSjKtbn1tacSU+ALwUETu7PdI8X13lBir5N1bM1eVK\nv4AzyV/RXgxclnLdJ5H/6vUsMC95nQn8DHguKb8XGF2wz2VJrAso8sr+HuI6lPwV/GeA59vPCzAC\neBB4GXgAGJ5mXEk9g4C1wIEFZamfL/L/0TQCO8j3e36uJ+cHqCef4BYDPya507zEcS0i33/b/jd2\nfbLth5PPdx7wNHB2ynF1+3NLI66k/Gbgog7bpnm+usoNFfsb8yMQzMwyrjd33ZiZ2T5wojczyzgn\nejOzjHOiNzPLOCd6M7OMc6I3M8s4J3ozs4z7b6KYiGqZZe1IAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x120970f98>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "review_lengths = []\n",
+    "for review in reviews:\n",
+    "    review_lengths.append(len(review.split(' ')))\n",
+    "plt.figure()\n",
+    "plt.title('Review Length')\n",
+    "plt.plot(sorted(review_lengths))"
    ]
   },
   {
@@ -116,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -276,11 +314,11 @@
     "    net = tflearn.input_data([None, 6000])\n",
     "    \n",
     "    #Hidden layer\n",
-    "    net = tflearn.fully_connected(net, 110, activation='ReLU')\n",
+    "    net = tflearn.fully_connected(net, 120, activation='relu')\n",
     "    \n",
     "    #Output Layer\n",
     "    net = tflearn.fully_connected(net, 2, activation='softmax')\n",
-    "    net = tflearn.regression(net, optimizer='sgd', learning_rate=0.1, loss='categorical_crossentropy')\n",
+    "    net = tflearn.regression(net, optimizer='sgd', learning_rate=0.09, loss='categorical_crossentropy')\n",
     "    \n",
     "    model = tflearn.DNN(net)\n",
     "    return model\n",
@@ -299,23 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Step: 1039  | total loss: \u001b[1m\u001b[32m0.09192\u001b[0m\u001b[0m | time: 0.198s\n",
-      "| SGD | epoch: 040 | loss: 0.09192 - acc: 0.9885 -- iter: 1600/1638\n",
-      "Training Step: 1040  | total loss: \u001b[1m\u001b[32m0.09017\u001b[0m\u001b[0m | time: 1.211s\n",
-      "| SGD | epoch: 040 | loss: 0.09017 - acc: 0.9896 | val_loss: 0.34819 - val_acc: 0.8704 -- iter: 1638/1638\n",
-      "--\n"
+      "Training Step: 185  | total loss: \u001b[1m\u001b[32m0.62902\u001b[0m\u001b[0m | time: 0.092s\n",
+      "\u001b[2K\r",
+      "| SGD | epoch: 031 | loss: 0.62902 - acc: 0.6240 -- iter: 1500/1620\n"
      ]
     }
    ],
    "source": [
-    "model.fit(X_train, Y_train, validation_set = 0.09, show_metric=True, batch_size=64, n_epoch=40)"
+    "model.fit(X_train, Y_train, validation_set = 0.1, show_metric=True, batch_size=300, n_epoch=100)"
    ]
   },
   {
@@ -327,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy:  [ 0.835  0.835]\n"
+      "Test accuracy:  [ 0.855  0.855]\n"
      ]
     }
    ],
@@ -346,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.06704208999872208, 0.9329578876495361]\n",
+      "[0.18156996369361877, 0.8184300065040588]\n",
       "Positiv!\n"
      ]
     }
@@ -361,7 +397,7 @@
    "source": [
     "# Check with a custom sentence.\n",
     "# res = the result of the prediction, containing the positive and negative probability.\n",
-    "res = model.predict([text_to_vector(\"ging so, aber die schauspieler waren gut\")])[0]\n",
+    "res = model.predict([text_to_vector(\"ein spannender film\")])[0]\n",
     "print(res)\n",
     "if(res[1] > res[0]):\n",
     "    print('Positiv!')\n",
@@ -376,9 +412,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -390,7 +424,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -401,5 +435,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
