added testing section and saved model

--- a/image_classification/Classifier_TensorFlow.ipynb
+++ b/image_classification/Classifier_TensorFlow.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAEICAYAAACQ6CLfAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE8ZJREFUeJzt3X+8VHWdx/HXG9B1u+oK0hLiD7IlHxLrmpJL6CPd1QKt\nHmoP17IfklpUGtqWbf5gAxctbc0yXdJbWqBkZpixypZoW2S0rYiGoCZGoCA/VEJUEgQ++8c5dxvw\nzplx7vy6fN/Px+M+7sz5nDnzuQPvOd9zzsw5igjMLD19Wt2AmbWGw2+WKIffLFEOv1miHH6zRDn8\nZoly+M0S5fDvQNIySZslDdxh+oOSQtLQ/P538/tHlMzzN5Ki5P7PJX2s5P5Fkv4g6UVJKyTdmk9f\nnE97UdJWSS+X3L+omx4nS7q5/n99feWv5VpJHSXTPibp53Va/nslLcpfp3mShpfU/kLS1yQ9LemP\nkqZK2qWkPlTS7Ly2WtK1kvrltQ+VvP4vStqY/1sfXo++24XD370/AKd13ZH0t8DruplvHXBpNQuU\nNA74CHBcROwOjATuBYiIt0TE7vn0XwKf7rofEV/q2Z/Scn2B8+q9UEnDgBnAJ4G9gP8EZnUFGLiA\n7DUeAbwZOAyYWLKIqcAzwGDgUOBo4GyAiJhR8vrvnk9fCiyo99/RSg5/924CTi+5Pw6Y3s1804BD\nJB1dxTLfBvw0In4PEBGrI6Kzx50C+VrpbElLJL0gaYqkN+Vrww2SfiBp13ze/pLulPRMvta7U9K+\nJct6o6S5+XLukfQfpaMMSaPy5a6X9FtJx1Ro79+B8yXtVab30ZLul/R8/nt0lX/2GOC+iLgvIrYA\nVwBDyEIM8F7gmohYFxHPAN8Azix5/BuBWyPi5YhYDfwEeEuZ5xoHTI+d7OOwDn/3/gfYU9LBkvoC\nHwC6G2ZvBL4EXFblMk+X9HlJI/Pl1tMY4HBgFPAvQCfwYWA/srVf10imD/Ad4ABgf+BPwLUly/ke\n8L/A3sBkstEKAJKGAHeRjXYGAOcDMyW9vqCv+cDP83m3I2lAvrxv5M93FXCXpL2r/aNLF5f/jCio\n7yvpr/L7XwfeL+l1+d91PNkbwI49HgC8g+7f/Hs1h7+8rrX/O4FHgZVl5rse2F/S8UULi4ibgQlk\nIf0FsFbSF+rXLl+JiA0RsRhYBNwdEUsj4nngv4C35n08FxEzI2JjRLxA9sZ1NICk/clGKF+MiM0R\ncR8wq+Q5PgzMjojZEbEtIuaQhfuECr19EZjQzZvEu4ElEXFTRGyJiFuAx8jW2pXcAxwt6Zh8VHMR\nsCt/3jz7CXCepNdLegNwbj69qz6X7I1iA7Ai/zvu6OZ5Tgd+GRF/qKKnXsXhL+8m4IPARyl414+I\nTcCU/KdQvi15HNk26ieBKZLG1KVbWFNy+0/d3N8dIF/TXS9puaQNZCHYKx+J7AOsi4iNJY99quT2\nAcA/5UP+9ZLWA0eRbTeXFRGLgDvJtsNL7QMs32HacrLhe6GIeIxsOH4tsAoYCDxCFmTI3tQeBB4C\n5pEF+xVgjaQ+ZG8OtwMd+WP7k2067Oh0ss27nY7DX0ZELCfb8XcC2X+SIt8hC/T7qlz2KxFxG7CQ\n8sPURvkccBDw9xGxJ9mQFrJh8SpggKTSnZv7ldx+CrgpIvYq+emIiMureN5JwMfZPthPk72hlNqf\n8qOs7UTEDyNiRETsnS9/KHB/XvtTRHw6IoZExIHAc8ADEbGNbJNlf+DaiNgUEc+R/RtuN4KRdCTZ\nG9QPq+mnt3H4i50F/GNEvFQ0U77DaRJQdhgv6aOS3i1pD0l98s2EtwC/qWvHle1BNhJYn29zT+oq\n5G9484HJknaV9Ha2H4LfDLxX0hhJfSXtlg+796WCiHgCuJU/D78BZgNvlvRBSf0kvR8YTjZKqEjS\n4XkfryfbxzErHxEgaYikfZQZBfxr198aEc+SvbF/Mn/evchGEQt3eIpxwMx882in4/AXiIjfR8T8\nKme/hWzNWc4Gsu3SJ4H1wFeAT+Xb1c30deAvgWfJdkLuuJPrQ8DbydaUl5IFdhNARDwFnEj2dzxD\nNhL4PNX/P/o3smE2+fKeA95DNhp5jmxH5XvycCLpOknXFSzvarLX8nfAH8lGFl3eRDbcf4ls2H5B\nRNxdUn8f2U6+Z4AnyDYJ/rmrKGk34FR20iE/gHayoxdWZ8o+iPRYREyqOLP1Kl7z23YkvS3/jEAf\nSWPJ1vTd7QW3Xq5f5VksMW8g28G5N9me809FxIOtbckawcN+s0R52G+WqKYO+1XyjTcza4yIUDXz\n9WjNL2mspN9JekLSjp/eMrM2VvM2f/5x0MfJPvu+guyTVadFxCMFj/Ga36zBmrHmPwJ4Iv/yyGbg\n+2SHhcysF+hJ+Iew/Zc+VtDNFzIkjZc0X1K1n5QzsyZo+A6//IQVneBhv1k76cmafyXbf+NrX6r8\nNpaZtV5Pwn8/MCw/7dOuZGe7mVXhMWbWJmoe9kfEFkmfBn5KdpLGG/OzyJhZL9DUj/d6m9+s8Zry\nIR8z670cfrNEOfxmiXL4zRLl8JslyuE3S5TDb5Yoh98sUQ6/WaIcfrNEOfxmiXL4zRLl8JslyuE3\nS5TDb5Yoh98sUQ6/WaIcfrNEOfxmiXL4zRLl8JslyuE3S5TDb5Yoh98sUQ6/WaIcfrNEOfxmiXL4\nzRLl8JslquZLdJsB7LnnnoX1k046qWxt4sSJhY8dNmxYYb3SFaY7OzvL1s4777zCx27atKmwvjPo\nUfglLQNeALYCWyJiZD2aMrPGq8ea/x8i4tk6LMfMmsjb/GaJ6mn4A7hH0gOSxnc3g6TxkuZLmt/D\n5zKzOurpsP+oiFgp6a+BOZIei4i5pTNERCfQCSCpeA+NmTVNj9b8EbEy/70W+BFwRD2aMrPGqzn8\nkjok7dF1G3gXsKhejZlZY6nSsdKyD5QOJFvbQ7b58L2IuKzCYzzs72XGjh1bWL/iiisK6yNGjKhn\nO3VzyCGHFNYXL17cpE7qLyJUzXw1b/NHxFLg72p9vJm1lg/1mSXK4TdLlMNvliiH3yxRDr9ZovyV\n3p1Anz7l38P79Sv+J77uuusK66ecckphvaOjo7DeSPPmzSusP/3002VrtR7i3pl4zW+WKIffLFEO\nv1miHH6zRDn8Zoly+M0S5fCbJcrH+XuBouP4AJMnTy5bu/jii+vczfaef/75wvrq1avL1g466KAe\nPffo0aML63PmzClbW79+fY+ee2fgNb9Zohx+s0Q5/GaJcvjNEuXwmyXK4TdLlMNvlqiaT91d05P5\n1N01qXSa6QcffLDmZb/yyiuF9RtuuKGwfs011xTWly5dWrZ2ySWXFD72uOOOK6wfdthhhfUiPnW3\n1/xmyXL4zRLl8JslyuE3S5TDb5Yoh98sUQ6/WaL8ff42UOl77XfddVfNy3744YcL60XnAgC44447\nan7uSi688MLC+rJlywrrU6dOrfm5Dz/88MJ6bz7OX62Ka35JN0paK2lRybQBkuZIWpL/7t/YNs2s\n3qoZ9n8XGLvDtAuAeyNiGHBvft/MepGK4Y+IucC6HSafCEzLb08DTqpzX2bWYLVu8w+KiFX57dXA\noHIzShoPjK/xecysQXq8wy8iougLOxHRCXSCv9hj1k5qPdS3RtJggPz32vq1ZGbNUGv4ZwHj8tvj\ngB/Xpx0za5aKw35JtwDHAAMlrQAmAZcDP5B0FrAcOLWRTe7shg8fXljfZ599al72OeecU1j/1a9+\nVfOye6rSefcvvfTShj33xo0bG7bs3qJi+CPitDKlY+vci5k1kT/ea5Yoh98sUQ6/WaIcfrNEOfxm\nifJXeq2hTj755LK1888/v/CxAwYMKKxXOlx39tlnl63Nnj278LEp8JrfLFEOv1miHH6zRDn8Zoly\n+M0S5fCbJcrhN0uUj/O3gS1bthTWX3755cL6brvtVrZ25JFHFj7217/+dWG9T5/i9cPIkSML6zNm\nzChb69ev+L/fvHnzCuunnHJKYX3NmjWF9dR5zW+WKIffLFEOv1miHH6zRDn8Zoly+M0S5fCbJUoR\nzbuIjq/YU5szzjijsP7tb3+75mVPmjSpsF7p9NpjxowprC9ZsqRs7dxzzy187N13311Yt+5FhKqZ\nz2t+s0Q5/GaJcvjNEuXwmyXK4TdLlMNvliiH3yxRPs7fC3R0dBTWN2zY0KROXruDDz64bO3xxx9v\nYifpqNtxfkk3SloraVHJtMmSVkp6KP85oSfNmlnzVTPs/y4wtpvpX4uIQ/MfX/7ErJepGP6ImAus\na0IvZtZEPdnhN0HSwnyzoH+5mSSNlzRf0vwePJeZ1Vmt4f8mcCBwKLAK+Gq5GSOiMyJGRkTxmR7N\nrKlqCn9ErImIrRGxDfgWcER92zKzRqsp/JIGl9w9GVhUbl4za08Vz9sv6RbgGGCgpBXAJOAYSYcC\nASwDPtHAHq2FKl1T4Prrry+sP/nkk/Vsx+qoYvgj4rRuJt/QgF7MrIn88V6zRDn8Zoly+M0S5fCb\nJcrhN0uUL9HdBgYOHFhYHzduXJM6ebUFCxYU1iudftval9f8Zoly+M0S5fCbJcrhN0uUw2+WKIff\nLFEOv1mifOruNjBx4sTC+iWXXFJYX7eu/CkWp0yZUvjYL3/5y4X1bdu2FdbPPPPMwvptt91WWLf6\n8yW6zayQw2+WKIffLFEOv1miHH6zRDn8Zoly+M0S5eP8TbDLLrsU1n/2s58V1kePHl1Ynzp1atna\nhAkTCh+7Zs2awnqlcw3cfPPNhfVWnosgVT7Ob2aFHH6zRDn8Zoly+M0S5fCbJcrhN0uUw2+WqGou\n0b0fMB0YRHZJ7s6IuFrSAOBWYCjZZbpPjYg/Nq7V3uvYY48trFc6jr9p06bC+pVXXvmaezKrZs2/\nBfhcRAwHRgHnSBoOXADcGxHDgHvz+2bWS1QMf0SsiogF+e0XgEeBIcCJwLR8tmnASY1q0szq7zVt\n80saCrwV+A0wKCJW5aXVZJsFZtZLVH2tPkm7AzOBz0TEBunPHx+OiCj3uX1J44HxPW3UzOqrqjW/\npF3Igj8jIm7PJ6+RNDivDwbWdvfYiOiMiJERMbIeDZtZfVQMv7JV/A3AoxFxVUlpFtD1la1xwI/r\n356ZNUo1w/4jgY8AD0t6KJ92EXA58ANJZwHLgVMb02L769u3b2H9wgsv7NHyp0+fXlh/6aWXytYq\nHQbs379/TT11Wbx4cY8eb61TMfwRcR9Q7vvBxQewzaxt+RN+Zoly+M0S5fCbJcrhN0uUw2+WKIff\nLFE+dXcdVDrOP3fu3ML6qFGjCuuVLpNd9G9YqbdKy77ssssK65UuH97M/1+W8am7zayQw2+WKIff\nLFEOv1miHH6zRDn8Zoly+M0SVfVpvKy8rVu3FtYXLlxYWK90nL9Pn8a9Ry9atKiwPnny5IY9t7WW\n1/xmiXL4zRLl8JslyuE3S5TDb5Yoh98sUQ6/WaJ8nL8Jrr766sL65s2bC+tnnHFGYb2jo6NsbebM\nmYWP/exnP1tYt52X1/xmiXL4zRLl8JslyuE3S5TDb5Yoh98sUQ6/WaIqnrdf0n7AdGAQEEBnRFwt\naTLwceCZfNaLImJ2hWX5JO5mDVbtefurCf9gYHBELJC0B/AAcBJwKvBiRFxZbVMOv1njVRv+ip/w\ni4hVwKr89guSHgWG9Kw9M2u117TNL2ko8FbgN/mkCZIWSrpRUv8yjxkvab6k+T3q1Mzqqupr9Una\nHfgFcFlE3C5pEPAs2X6AKWSbBmdWWIaH/WYNVrdtfgBJuwB3Aj+NiKu6qQ8F7oyIERWW4/CbNVjd\nLtQpScANwKOlwc93BHY5GSg+DayZtZVq9vYfBfwSeBjoup7zRcBpwKFkw/5lwCfynYNFy/Ka36zB\n6jrsrxeH36zx6jbsN7Odk8NvliiH3yxRDr9Zohx+s0Q5/GaJcvjNEuXwmyXK4TdLlMNvliiH3yxR\nDr9Zohx+s0Q5/GaJavYlup8FlpfcH5hPa0ft2lu79gXurVb17O2Aamds6vf5X/Xk0vyIGNmyBgq0\na2/t2he4t1q1qjcP+80S5fCbJarV4e9s8fMXadfe2rUvcG+1aklvLd3mN7PWafWa38xaxOE3S1RL\nwi9prKTfSXpC0gWt6KEcScskPSzpoVZfXzC/BuJaSYtKpg2QNEfSkvx3t9dIbFFvkyWtzF+7hySd\n0KLe9pP035IekbRY0nn59Ja+dgV9teR1a/o2v6S+wOPAO4EVwP3AaRHxSFMbKUPSMmBkRLT8AyGS\n3gG8CEzvuhSapK8A6yLi8vyNs39EfKFNepvMa7xse4N6K3dZ+Y/Swteunpe7r4dWrPmPAJ6IiKUR\nsRn4PnBiC/poexExF1i3w+QTgWn57Wlk/3markxvbSEiVkXEgvz2C0DXZeVb+toV9NUSrQj/EOCp\nkvsraOEL0I0A7pH0gKTxrW6mG4NKLou2GhjUyma6UfGy7c20w2Xl2+a1q+Vy9/XmHX6vdlREHAoc\nD5yTD2/bUmTbbO10rPabwIFk13BcBXy1lc3kl5WfCXwmIjaU1lr52nXTV0tet1aEfyWwX8n9ffNp\nbSEiVua/1wI/IttMaSdruq6QnP9e2+J+/l9ErImIrRGxDfgWLXzt8svKzwRmRMTt+eSWv3bd9dWq\n160V4b8fGCbpjZJ2BT4AzGpBH68iqSPfEYOkDuBdtN+lx2cB4/Lb44Aft7CX7bTLZdvLXVaeFr92\nbXe5+4ho+g9wAtke/98DF7eihzJ9HQj8Nv9Z3OregFvIhoGvkO0bOQvYG7gXWALcAwxoo95uIruU\n+0KyoA1uUW9HkQ3pFwIP5T8ntPq1K+irJa+bP95rlijv8DNLlMNvliiH3yxRDr9Zohx+s0Q5/GaJ\ncvjNEvV/3wmLrvHRE/AAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x121a8e8d0>"
+       "<matplotlib.figure.Figure at 0x118f94ef0>"
       ]
      },
      "metadata": {},
@@ -82,13 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Settings\n",
+    "\n",
     "learning_rate = 0.005\n",
     "training_epochs = 80\n",
     "batch_size = 256\n",
@@ -118,8 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = tf.placeholder(\"float\", [None, 28, 28, 1])\n",
@@ -137,8 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Hidden layer with ReLU activation function\n",
@@ -172,98 +177,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss = 4.07393, Accuracy: 0.882812\n",
-      "Loss = 1.74991, Accuracy: 0.953125\n",
-      "Loss = 1.12102, Accuracy: 0.941406\n",
-      "Loss = 0.508161, Accuracy: 0.957031\n",
-      "Loss = 0.829845, Accuracy: 0.96875\n",
-      "Loss = 0.462166, Accuracy: 0.957031\n",
-      "Loss = 0.471857, Accuracy: 0.980469\n",
-      "Loss = 0.327558, Accuracy: 0.980469\n",
-      "Loss = 0.10485, Accuracy: 0.980469\n",
-      "Loss = 0.177759, Accuracy: 0.972656\n",
-      "Loss = 0.144073, Accuracy: 0.996094\n",
-      "Loss = 0.11393, Accuracy: 0.988281\n",
-      "Loss = 0.0310948, Accuracy: 0.992188\n",
-      "Loss = 0.0476863, Accuracy: 0.992188\n",
-      "Loss = 0.065115, Accuracy: 0.992188\n",
-      "Loss = 0.000586069, Accuracy: 1.0\n",
-      "Loss = 0.00116679, Accuracy: 1.0\n",
-      "Loss = 0.00015305, Accuracy: 1.0\n",
-      "Loss = 0.0385735, Accuracy: 0.992188\n",
-      "Loss = 0.00467905, Accuracy: 0.996094\n",
-      "Loss = 0.000465124, Accuracy: 1.0\n",
-      "Loss = 0.000393983, Accuracy: 1.0\n",
-      "Loss = 0.0558151, Accuracy: 0.996094\n",
-      "Loss = 0.035738, Accuracy: 0.996094\n",
-      "Loss = 3.05613e-05, Accuracy: 1.0\n",
-      "Loss = 0.000488039, Accuracy: 1.0\n",
-      "Loss = 0.00018405, Accuracy: 1.0\n",
-      "Loss = 0.0375511, Accuracy: 0.996094\n",
-      "Loss = 0.00562305, Accuracy: 0.996094\n",
-      "Loss = 0.00271123, Accuracy: 1.0\n",
-      "Loss = 0.00692691, Accuracy: 0.996094\n",
-      "Loss = 0.0386684, Accuracy: 0.996094\n",
-      "Loss = 0.0744763, Accuracy: 0.996094\n",
-      "Loss = 0.0438099, Accuracy: 0.996094\n",
-      "Loss = 0.000317214, Accuracy: 1.0\n",
-      "Loss = 0.00104038, Accuracy: 1.0\n",
-      "Loss = 0.000552937, Accuracy: 1.0\n",
-      "Loss = 0.000468258, Accuracy: 1.0\n",
-      "Loss = 0.0354413, Accuracy: 0.996094\n",
-      "Loss = 4.73833e-06, Accuracy: 1.0\n",
-      "Loss = 0.000184031, Accuracy: 1.0\n",
-      "Loss = 0.0338396, Accuracy: 0.996094\n",
-      "Loss = 1.90325e-05, Accuracy: 1.0\n",
-      "Loss = 0.0151235, Accuracy: 0.996094\n",
-      "Loss = 1.53668e-08, Accuracy: 1.0\n",
-      "Loss = 7.31081e-08, Accuracy: 1.0\n",
-      "Loss = 0.000157645, Accuracy: 1.0\n",
-      "Loss = 2.60769e-08, Accuracy: 1.0\n",
-      "Loss = 1.19331e-06, Accuracy: 1.0\n",
-      "Loss = 0.000603766, Accuracy: 1.0\n",
-      "Loss = 6.93422e-05, Accuracy: 1.0\n",
-      "Loss = 0.018367, Accuracy: 0.996094\n",
-      "Loss = 2.12694e-06, Accuracy: 1.0\n",
-      "Loss = 0.00260581, Accuracy: 1.0\n",
-      "Loss = 0.0441127, Accuracy: 0.996094\n",
-      "Loss = 0.0491102, Accuracy: 0.992188\n",
-      "Loss = 1.58325e-08, Accuracy: 1.0\n",
+      "Loss = 4.81221, Accuracy: 0.90625\n",
+      "Loss = 1.96905, Accuracy: 0.914062\n",
+      "Loss = 2.70033, Accuracy: 0.925781\n",
+      "Loss = 0.992314, Accuracy: 0.96875\n",
+      "Loss = 0.815255, Accuracy: 0.953125\n",
+      "Loss = 0.861149, Accuracy: 0.960938\n",
+      "Loss = 0.605924, Accuracy: 0.976562\n",
+      "Loss = 0.241812, Accuracy: 0.964844\n",
+      "Loss = 0.118306, Accuracy: 0.984375\n",
+      "Loss = 0.0367031, Accuracy: 0.996094\n",
+      "Loss = 0.012198, Accuracy: 0.996094\n",
+      "Loss = 0.101633, Accuracy: 0.988281\n",
+      "Loss = 0.0776152, Accuracy: 0.992188\n",
+      "Loss = 0.000116203, Accuracy: 1.0\n",
+      "Loss = 0.000392132, Accuracy: 1.0\n",
+      "Loss = 0.0007864, Accuracy: 1.0\n",
+      "Loss = 3.30404e-05, Accuracy: 1.0\n",
+      "Loss = 0.0268911, Accuracy: 0.996094\n",
+      "Loss = 0.0179508, Accuracy: 0.992188\n",
+      "Loss = 1.81747e-05, Accuracy: 1.0\n",
+      "Loss = 7.99914e-06, Accuracy: 1.0\n",
+      "Loss = 0.251167, Accuracy: 0.992188\n",
+      "Loss = 0.000782173, Accuracy: 1.0\n",
+      "Loss = 0.0178846, Accuracy: 0.996094\n",
+      "Loss = 3.969e-06, Accuracy: 1.0\n",
+      "Loss = 0.0219705, Accuracy: 0.996094\n",
+      "Loss = 0.0328069, Accuracy: 0.996094\n",
+      "Loss = 0.000835043, Accuracy: 1.0\n",
+      "Loss = 0.00167565, Accuracy: 1.0\n",
+      "Loss = 3.51884e-06, Accuracy: 1.0\n",
+      "Loss = 0.0161608, Accuracy: 0.996094\n",
+      "Loss = 7.23307e-06, Accuracy: 1.0\n",
+      "Loss = 0.0792181, Accuracy: 0.992188\n",
+      "Loss = 5.08081e-06, Accuracy: 1.0\n",
+      "Loss = 0.000241972, Accuracy: 1.0\n",
+      "Loss = 0.00111556, Accuracy: 1.0\n",
+      "Loss = 4.11048e-05, Accuracy: 1.0\n",
+      "Loss = 0.000330441, Accuracy: 1.0\n",
+      "Loss = 2.06014e-05, Accuracy: 1.0\n",
+      "Loss = 0.000211932, Accuracy: 1.0\n",
+      "Loss = 0.0828453, Accuracy: 0.996094\n",
+      "Loss = 0.00043883, Accuracy: 1.0\n",
+      "Loss = 2.3469e-07, Accuracy: 1.0\n",
+      "Loss = 8.95093e-06, Accuracy: 1.0\n",
+      "Loss = 6.19885e-05, Accuracy: 1.0\n",
+      "Loss = 0.00067021, Accuracy: 1.0\n",
+      "Loss = 2.6347e-06, Accuracy: 1.0\n",
+      "Loss = 0.000183904, Accuracy: 1.0\n",
+      "Loss = 0.000124213, Accuracy: 1.0\n",
+      "Loss = 4.46078e-07, Accuracy: 1.0\n",
+      "Loss = 3.41319e-05, Accuracy: 1.0\n",
+      "Loss = 4.01389e-06, Accuracy: 1.0\n",
+      "Loss = 0.0159044, Accuracy: 0.996094\n",
+      "Loss = 0.000391774, Accuracy: 1.0\n",
+      "Loss = 6.5595e-06, Accuracy: 1.0\n",
+      "Loss = 0.000564894, Accuracy: 1.0\n",
+      "Loss = 0.000327045, Accuracy: 1.0\n",
+      "Loss = 9.29661e-06, Accuracy: 1.0\n",
+      "Loss = 6.61234e-08, Accuracy: 1.0\n",
+      "Loss = 3.80901e-07, Accuracy: 1.0\n",
+      "Loss = 1.29203e-06, Accuracy: 1.0\n",
+      "Loss = 1.28052e-05, Accuracy: 1.0\n",
+      "Loss = 1.9527e-05, Accuracy: 1.0\n",
+      "Loss = 7.16915e-05, Accuracy: 1.0\n",
+      "Loss = 2.16405e-05, Accuracy: 1.0\n",
+      "Loss = 0.109869, Accuracy: 0.996094\n",
+      "Loss = 0.000279897, Accuracy: 1.0\n",
+      "Loss = 1.49496e-06, Accuracy: 1.0\n",
       "Loss = 0.0, Accuracy: 1.0\n",
-      "Loss = 6.24405e-07, Accuracy: 1.0\n",
-      "Loss = 0.000118595, Accuracy: 1.0\n",
-      "Loss = 0.000666042, Accuracy: 1.0\n",
+      "Loss = 1.72778e-05, Accuracy: 1.0\n",
       "Loss = 0.0, Accuracy: 1.0\n",
-      "Loss = 2.79397e-09, Accuracy: 1.0\n",
-      "Loss = 0.000482824, Accuracy: 1.0\n",
-      "Loss = 2.45931e-06, Accuracy: 1.0\n",
-      "Loss = 6.98491e-09, Accuracy: 1.0\n",
-      "Loss = 0.00368449, Accuracy: 0.996094\n",
-      "Loss = 0.0390971, Accuracy: 0.996094\n",
+      "Loss = 1.22424e-05, Accuracy: 1.0\n",
+      "Loss = 0.000152154, Accuracy: 1.0\n",
+      "Loss = 4.58649e-07, Accuracy: 1.0\n",
+      "Loss = 1.16415e-08, Accuracy: 1.0\n",
+      "Loss = 2.06957e-05, Accuracy: 1.0\n",
+      "Loss = 0.000441119, Accuracy: 1.0\n",
       "Loss = 0.0, Accuracy: 1.0\n",
-      "Loss = 2.69573e-06, Accuracy: 1.0\n",
-      "Loss = 1.51743e-05, Accuracy: 1.0\n",
-      "Loss = 8.77052e-06, Accuracy: 1.0\n",
-      "Loss = 0.0, Accuracy: 1.0\n",
-      "Loss = 2.76593e-07, Accuracy: 1.0\n",
-      "Loss = 7.14155e-05, Accuracy: 1.0\n",
-      "Loss = 7.40398e-06, Accuracy: 1.0\n",
-      "Loss = 6.37734e-05, Accuracy: 1.0\n",
-      "Loss = 9.31322e-10, Accuracy: 1.0\n",
-      "Loss = 6.51925e-09, Accuracy: 1.0\n",
-      "Loss = 0.0, Accuracy: 1.0\n",
+      "Loss = 1.87151e-06, Accuracy: 1.0\n",
+      "Loss = 4.16279e-07, Accuracy: 1.0\n",
       "Training Finished!\n"
      ]
     }
    ],
    "source": [
+    "save_file = './trained_model.ckpt'\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    \n",
@@ -286,6 +294,9 @@
     "                print(message)\n",
     "                \n",
     "            step += 1\n",
+    "    \n",
+    "    # Save the model\n",
+    "    saver.save(sess, save_file)\n",
     "    print(\"Training Finished!\")\n",
     "        "
    ]
@@ -297,6 +308,31 @@
    },
    "source": [
     "## Validation & Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9726\n"
+     ]
+    }
+   ],
+   "source": [
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "# Launch the graph\n",
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, save_file)\n",
+    "    \n",
+    "    test_accuracy = sess.run(accuracy, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
+    "\n",
+    "print(\"Accuracy: %s\" % test_accuracy)    "
    ]
   },
   {
