adding cnn network notebook

--- a/image_classification_tf_relu/Classifier_TF_Relu.ipynb
+++ b/image_classification_tf_relu/Classifier_TF_Relu.ipynb
@@ -29,8 +29,7 @@
     "import tensorflow as tf\n",
     "\n",
     "# Get mnist data set\n",
-    "mnist = input_data.read_data_sets(\"./data/\", one_hot=True, reshape=False)\n",
-    "\n"
+    "mnist = input_data.read_data_sets(\"./data/\", one_hot=True, reshape=False)"
    ]
   },
   {
@@ -297,8 +296,7 @@
     "    \n",
     "    # Save the model\n",
     "    saver.save(sess, save_file)\n",
-    "    print(\"Training Finished!\")\n",
-    "        "
+    "    print(\"Training Finished!\")"
    ]
   },
   {
@@ -332,7 +330,7 @@
     "    \n",
     "    test_accuracy = sess.run(accuracy, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
     "\n",
-    "print(\"Accuracy: %s\" % test_accuracy)    "
+    "print(\"Accuracy: %s\" % test_accuracy)"
    ]
   },
   {
@@ -342,7 +340,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -354,7 +354,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -365,5 +365,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
